added check style, moved to java 21