@@ -27,7 +27,7 @@
         <url/>
     </scm>
     <properties>
-        <java.version>25</java.version>
+        <java.version>21</java.version>
     </properties>
     <repositories>
         <repository>
@@ -178,9 +178,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.0</version>
                 <configuration>
-                    <release>25</release>
+                    <release>21</release>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
                         <arg>-Xlint:unchecked</arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
@@ -195,17 +194,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.5.4</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -219,7 +212,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <jvmArguments>--enable-preview --enable-native-access=ALL-UNNAMED</jvmArguments>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
@@ -231,12 +223,12 @@
 	        <plugin>
 		        <groupId>com.diffplug.spotless</groupId>
 		        <artifactId>spotless-maven-plugin</artifactId>
-		        <version>2.43.0</version>
+		        <version>2.45.0</version>
 		        <configuration>
 			        <java>
 				        <importOrder />
 				        <googleJavaFormat>
-					        <version>1.17.0</version>
+					        <version>1.25.2</version>
 					        <style>GOOGLE</style>
 					        <reflowLongStrings>true</reflowLongStrings>
 				        </googleJavaFormat>
